# integrated_thread_system

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEPENDENCIES.md  Doxyfile  LICENSE  MIGRATION.md  README.md  TROUBLESHOOTING.md  build.sh  build_all.sh  dependency.sh  fix_includes.sh  generate_docs.sh  quick_start.sh  test.sh  vcpkg.json
.github/workflows/: README_WORKFLOW_IMPROVEMENTS.md  build-Doxygen.yaml  build-ubuntu-clang.yaml  build-ubuntu-gcc.yaml  build-windows-msys2.yaml  build-windows-vs.yaml  ci.yml  coverage.yml  dependency-security-scan.yml  integration-tests.yml  static-analysis.yml
cmake/: integrated_thread_system_config.cmake.in
config/: default.json  development.json  production.json  vcpkg.json
docs/: ADAPTER_INTEGRATION_GUIDE.md  API.md  API_REFERENCE.md  API_REFERENCE_KO.md  ARCHITECTURE.md  ARCHITECTURE_KO.md  BENCHMARKS.md  BENCHMARKS_KO.md  BUILD_SCRIPTS.md  CHANGELOG.md  CHANGELOG_KO.md  DESIGN_VALIDATION.md  EXAMPLES.md  FEATURES.md  FEATURES_KO.md  IMPROVEMENTS_2025-11-16.md  IMPROVEMENT_SUMMARY.md  INTEGRATION_GUIDE.md  PRODUCTION_QUALITY.md  PRODUCTION_QUALITY_KO.md  PROJECT_STRUCTURE_KO.md  README.md  README_KO.md  SPRINT_IMPROVEMENTS.md  VERSION_COMPATIBILITY.md
docs/advanced/: DESIGN_DOCUMENT.md  DESIGN_VALIDATION.md  IMPROVEMENT_PLAN.md  SPRINT_IMPROVEMENTS.md  VERSION_COMPATIBILITY.md
docs/api/: ADVANCED_FEATURES_GUIDE.md
docs/architecture/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  STRUCTURE.md
docs/contributing/: CONTRIBUTING.md
docs/guides/: FAQ.md  QUICK_START.md  README.md  README_ENHANCED.md  SYSTEM_COMBINATIONS_GUIDE.md  TROUBLESHOOTING.md
docs/integration/: README.md
docs/performance/: BASELINE.md
examples/: CMakeLists.txt  adaptive_optimization_demo.cpp  basic_example.cpp  basic_example_fixed.cpp  comprehensive_example.cpp  dependency_injection_example.cpp  integrated_monitoring_example.cpp  plugin_system_example.cpp  simple_usage_example.cpp  test_enhanced.cpp  test_framework_example.cpp  typed_thread_pool_demo.cpp
examples/01_basic/: README.md  futures_basics.cpp  hello_thread.cpp  simple_tasks.cpp
examples/02_intermediate/: priority_jobs.cpp
examples/03_advanced/: custom_priorities.cpp
examples/04_real_world/: web_server.cpp
examples/05_system_combinations/: 01_thread_only.cpp  02_logger_only.cpp  03_monitoring_only.cpp  04_thread_logger.cpp  07_all_systems.cpp
examples/06_cancellation/: cancellation_demo.cpp
examples/basic/: basic_example.cpp  futures_basics.cpp  simple_tasks.cpp  simple_usage_example.cpp
examples/improved/: 01_basic_improved.cpp  02_advanced_features.cpp  03_corrected_basic_example.cpp  04_working_example.cpp
examples/monitoring/: README.md  adaptive_monitoring_demo.cpp  health_check_demo.cpp
include/: unified_thread_system.h
include/kcenon/integrated/: error_handler.h  metrics_aggregator.h  unified_thread_system.h
include/kcenon/integrated/adapters/: logger_adapter.h  monitoring_adapter.h  thread_adapter.h
include/kcenon/integrated/core/: configuration.h  system_coordinator.h
include/kcenon/integrated/extensions/: distributed_tracing.h  metrics_aggregator.h  plugin_manager.h
include/kcenon/integrated/framework/: application.h
include/kcenon/integrated/patterns/: integration_patterns.h
include/kcenon/testing/: test_framework.h  test_runner.h
include/kcenon/thread/core/: plugin_system.h
src/: unified_thread_system.cpp  unified_thread_system_enhanced.cpp
src/adapters/: logger_adapter.cpp  monitoring_adapter.cpp  thread_adapter.cpp
src/core/: configuration.cpp  system_coordinator.cpp
src/extensions/: distributed_tracing.cpp  metrics_aggregator.cpp  plugin_manager.cpp
src/framework/: unified_thread_system.cpp
test/: test_basic_improvements.cpp  test_core_functionality.cpp  test_minimal_improvements.cpp  test_unified_enhanced.cpp
tests/: CMakeLists.txt
tests/benchmarks/: bench_throughput.cpp
tests/examples/: test_improvements_demo.cpp
tests/integration/: CMakeLists.txt  test_monitoring_v4.cpp  test_system_integration.cpp  test_thread_pool_v2.cpp
tests/unit/: CMakeLists.txt  metrics_aggregator_test.cpp  test_basic_operations.cpp  test_basic_operations_improved.cpp  test_priority_scheduling.cpp
tests/utils/: README.md  async_test_patterns.h  platform_test_config.h  test_fixture_base.h  test_wait_helper.h
